@@ -543,6 +543,7 @@ namespace lua {
     LIBZHL_API void TableAssoc(lua_State* L, int key, LuaStackRef dstTable, LuaStackRef srcObj);
 
     namespace callbacks {
+        LIBZHL_API bool CheckInteger(lua_State* L, int stackPosition);
         LIBZHL_API int ToInteger(lua_State* L, int stackPosition);
         LIBZHL_API double ToNumber(lua_State* L, int stackPosition);
         LIBZHL_API bool ToBoolean(lua_State* L, int stackPosition);
